syntax = "proto3";
package proto;

option go_package = "github.com/lquyet/distributed-lock/proto";

import "models.proto";

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
}